[package]
name = "blog"
version = "0.1.0"
authors = ["Marcus Antunius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
rocket_contrib = "0.4.7"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "*", features = ["serde"] }